# qwen-inference

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  test_regex.py
.claude/: turboquant-plan.md
docs/: future-work.md  kv-cache-unification.md  modular-layer-architecture.md  phase4-investigation.md  plan-ane-lm-head.md  plan-deltanet-fusion.md  plan-gemma-impl.md  plan-grammar-guided-decode.md  plan-grammar-trie.md  plan-modular-layer-arch-impl.md  plan-resolve-once.md  plan-session-kv-cache.md  prior-art.md
patches/: 0001-qinf-patch-sentinel.patch  0002-add-deltanet-post-state-op.patch  0003-add-deltanet-post-state-metal.patch  0004-add-deltanet-pre-state-op.patch  0005-add-deltanet-pre-state-metal.patch  apply-all.sh
py/: benchmark_concurrent.py  benchmark_order_management.py  dsl.gbnf  generate_keep_list.py  js-subset.gbnf  order-management.gbnf  qwen3_golden.py  qwen3_tokenizer_validation.py  simple_token_extractor.py  tokenize_dsl.py
scripts/: build.sh  gen_gemma_ref_logits.py  run_tests.py
src/: qinf_error.h
src/cli/: CMakeLists.txt  chat.cpp  chat.h  cli-args.h  complete.cpp  complete.h  main.cpp  pretokenized_literals.h  pretokenized_literals_qwen2.h  pretokenized_literals_qwen35.h  speculative-bridge.h  tensor_tracer.h
src/core/: decode_step.cpp  decode_step.h  model.cpp  model.h
src/kv-cache/: CMakeLists.txt  compressed_kv_store.cpp  compressed_kv_store.h  simple-kv-cache.cpp  simple-kv-cache.h  ssm-state-cache.cpp  ssm-state-cache.h  turboquant.h
src/layers/: CMakeLists.txt  attention.cpp  attention.h  deltanet.cpp  ffn.cpp  ffn.h  layer.h  norm.cpp  norm.h  ple.cpp  ple.h  transformer_block.cpp  transformer_block.h
src/loader/: CMakeLists.txt  chat_template.cpp  chat_template.h  gguf_loader.cpp  gguf_loader.h  tokenizer.cpp  tokenizer.h  weight_binding.cpp  weight_binding.h
src/metal/: CMakeLists.txt
src/models/: CMakeLists.txt  forward_pass_base.cpp  forward_pass_base.h  gemma1.cpp  gemma1.h  gemma2.cpp  gemma3.cpp  gemma4.cpp  gemma4.h  model_registry.cpp  model_registry.h  qwen3.cpp  qwen3.h  qwen35.cpp  qwen35.h  qwen36.cpp
src/quant/: CMakeLists.txt
src/qwen3-core/: CMakeLists.txt  README.md  forward-pass-base.cpp  forward-pass-base.h  forward-pass-factory.cpp  forward-pass-factory.h  forward-pass-qwen35.cpp  forward-pass-qwen35.h  forward-pass.cpp  forward-pass.h  gguf-loader.cpp  gguf-loader.h  grammar.cpp  grammar.h  platform.h  qwen3-model.cpp  qwen3-model.h  sampling.cpp  sampling.h  tokenizer.cpp  tokenizer.h  vocab_utils.h
src/sampling/: CMakeLists.txt  README_grammar_flow.md  grammar.cpp  grammar_vocab.cpp  grammar_vocab.h  prompt_lookup.h  sampling.cpp  sampling.h  speculative.h  token-trie.cpp  token-trie.h
src/server/: CMakeLists.txt  README_server.md  http_server.cpp  inference_server.h
src/state/: CMakeLists.txt  deltanet_state.h  kv_cache_compressed.cpp  kv_cache_compressed.h  kv_cache_simple.cpp  kv_cache_simple.h  layer_state.h  recurrent_state.cpp  recurrent_state.h  snapkv.cpp  snapkv.h  ssm_state_cache.cpp  turboquant.cpp
tests/: CMakeLists.txt  accepted_order_mngmt_examples.txt  debug_gguf.cpp  system_prompt.txt  system_prompt_account_mngmt.txt  system_prompt_order_mngmt.txt
tests/fixtures/: canary_prompts_gemma.txt  deltanet_breakdown_qwen36.json  deltanet_substage_breakdown_qwen36.json  moe_breakdown_qwen36.json  norms_breakdown_qwen36.json  perf_baseline_post_gemma.json  qwen3_tq_prefill_baseline.json
tests/grammar/: CMakeLists.txt  test_corpus_parse.cpp  test_dynamic_strings.cpp  test_js_subset.cpp  test_multitoken.cpp  test_resolve_once.cpp  test_sampling_integration.cpp  test_sparse_differential.cpp
tests/integration/: test_e2e_generation.cpp  test_http_server.cpp  test_order_management_generation.cpp  test_parallel_grammar.cpp  test_parallel_order_management.cpp
tests/perf/: attention_breakdown.cpp  breakdown_harness.h  deltanet_breakdown.cpp  deltanet_substage_breakdown.cpp  moe_breakdown.cpp  norms_breakdown.cpp  perf_baseline.cpp
tests/unit/: test_attention.cpp  test_chat_template.cpp  test_chat_template_gemma4.cpp  test_compressed_kv_store.cpp  test_deltanet_post_state.cpp  test_deltanet_pre_state.cpp  test_ffn.cpp  test_gemma1_forward.cpp  test_gemma4_final_softcap.cpp  test_gemma4_recipe.cpp  test_grammar_vocab.cpp  test_kv_cache.cpp  test_kv_reference_mode.cpp  test_layer_spec.cpp  test_layer_state.cpp  test_loader.cpp  test_model_registry.cpp  test_norm.cpp  test_ple.cpp  test_qwen35_forward_attn.cpp  test_qwen35_generation.cpp  test_qwen35_hybrid_cache.cpp  test_qwen35_metadata.cpp  test_qwen35_tensor_loading.cpp  test_qwen35_tokenizer.cpp  test_qwen3_tq_prefill.cpp  test_recurrent_state.cpp  test_rope_pruned.cpp  test_snapkv_eviction.cpp  test_snapkv_position.cpp  test_speculative.cpp  test_ssm_state_cache.cpp  test_token_trie.cpp  test_tokenizer.cpp  test_tokenizer_gemma.cpp  test_tokenizer_gemma4.cpp  test_transformer_block.cpp  test_transformer_block_ple.cpp  test_turboquant.cpp  test_turboquant_generation.cpp  (+2 more)
