# tests/CMakeLists.txt
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
FetchContent_MakeAvailable(googletest)

# Define the unit test executable
add_executable(qwen3-unit-tests
    unit/test_tokenizer.cpp
    unit/test_vocab_file_loading.cpp
    unit/test_qwen35_metadata.cpp
    unit/test_qwen35_tensor_loading.cpp
    unit/test_ssm_state_cache.cpp
    unit/test_qwen35_tokenizer.cpp
    unit/test_qwen35_hybrid_cache.cpp
    unit/test_qwen35_forward_attn.cpp
    unit/test_qwen35_generation.cpp
    unit/test_grammar_vocab.cpp
    unit/test_turboquant_generation.cpp
)

# Link libraries for unit tests
target_link_libraries(qwen3-unit-tests PRIVATE
    GTest::gtest_main
    qinf-models
    qwen3-core
    sampling
    ggml
)

# Discover and add unit tests to CTest
include(GoogleTest)
gtest_discover_tests(qwen3-unit-tests)

# Define the integration test executable
add_executable(qwen3-integration-tests
    integration/test_e2e_generation.cpp
)

# Link libraries for integration tests
target_link_libraries(qwen3-integration-tests PRIVATE
    GTest::gtest_main
    qinf-models
    qwen3-core
    sampling
    ggml
)

# Discover and add integration tests to CTest
gtest_discover_tests(qwen3-integration-tests)

# Define the standalone order management test (Non-GTest)
add_executable(qwen3-order-mngmt-test
    integration/test_order_management_generation.cpp
)

# Link libraries
target_link_libraries(qwen3-order-mngmt-test PRIVATE
    qinf-models
    qwen3-core
    sampling
    ggml
)

# Define the standalone order management test (Non-GTest)
add_executable(qwen3-parallel-order-mngmt-test
    integration/test_parallel_order_management.cpp
)

# Link libraries
target_link_libraries(qwen3-parallel-order-mngmt-test PRIVATE
    qinf-models
    qwen3-core
    sampling
    ggml
)

# TurboQuant unit tests (GTest, no model needed)
add_executable(qwen3-turboquant-tests
    unit/test_turboquant.cpp
)

target_link_libraries(qwen3-turboquant-tests PRIVATE
    GTest::gtest_main
    qinf-state
)

gtest_discover_tests(qwen3-turboquant-tests)

# Compressed KV store unit tests (GTest, no model needed)
add_executable(qwen3-compressed-kv-tests
    unit/test_compressed_kv_store.cpp
)

target_link_libraries(qwen3-compressed-kv-tests PRIVATE
    GTest::gtest_main
    qinf-state
)

gtest_discover_tests(qwen3-compressed-kv-tests)

# SnapKV CLI config tests (GTest, no model needed)
add_executable(qwen3-snapkv-cli-tests
    unit/test_snapkv_cli.cpp
)

target_link_libraries(qwen3-snapkv-cli-tests PRIVATE
    GTest::gtest_main
)

gtest_discover_tests(qwen3-snapkv-cli-tests)

# SnapKV eviction + compaction unit tests (GTest, no model needed)
add_executable(qwen3-snapkv-eviction-tests
    unit/test_snapkv_eviction.cpp
)

target_link_libraries(qwen3-snapkv-eviction-tests PRIVATE
    GTest::gtest_main
    qinf-state
    ggml
)

gtest_discover_tests(qwen3-snapkv-eviction-tests)

# SnapKV position tracking tests (GTest)
add_executable(qwen3-snapkv-position-tests
    unit/test_snapkv_position.cpp
)

target_link_libraries(qwen3-snapkv-position-tests PRIVATE
    GTest::gtest_main
    qinf-state
    qwen3-core
    ggml
)

gtest_discover_tests(qwen3-snapkv-position-tests)

# TokenTrie unit tests (GTest, no model needed)
add_executable(qwen3-token-trie-tests
    unit/test_token_trie.cpp
)

target_link_libraries(qwen3-token-trie-tests PRIVATE
    GTest::gtest_main
    sampling
)

gtest_discover_tests(qwen3-token-trie-tests)

# Parallel grammar test (Non-GTest)
add_executable(qwen3-parallel-grammar-test
    integration/test_parallel_grammar.cpp
)

target_link_libraries(qwen3-parallel-grammar-test PRIVATE
    qinf-models
    qwen3-core
    sampling
    ggml
)

# HTTP Server Integration Test (GTest)
add_executable(qwen3-http-server-test
    integration/test_http_server.cpp
)

target_link_libraries(qwen3-http-server-test PRIVATE
    inference_server
    httplib::httplib
    nlohmann_json::nlohmann_json
    GTest::gtest
    GTest::gtest_main
    Threads::Threads
)

target_compile_features(qwen3-http-server-test PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-http-server-test)

# Grammar regression tests (non-GTest standalone executables)
add_subdirectory(grammar)

# ── Phase 3 unit tests ────────────────────────────────────────────────────────

# DeltaNetState tests (PR 3.D.1) — no model file needed.
add_executable(qwen3-deltanet-state-tests
    unit/test_deltanet_state.cpp
)

target_link_libraries(qwen3-deltanet-state-tests PRIVATE
    GTest::gtest_main
    qinf-state
    ggml
)

target_compile_features(qwen3-deltanet-state-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-deltanet-state-tests)

# DeltaNetLayer tests (PR 3.D.2-4) — no model file needed.
add_executable(qwen3-deltanet-tests
    unit/test_deltanet.cpp
)

target_link_libraries(qwen3-deltanet-tests PRIVATE
    GTest::gtest_main
    qinf-layers
    qinf-state
    ggml
)

target_compile_features(qwen3-deltanet-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-deltanet-tests)

# MoELayer tests (PR 3.M.1-3) — no model file needed.
add_executable(qwen3-moe-tests
    unit/test_moe.cpp
)

target_link_libraries(qwen3-moe-tests PRIVATE
    GTest::gtest_main
    qinf-layers
    ggml
)

target_compile_features(qwen3-moe-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-moe-tests)

# MoE residency tracker tests (PR 3.M.4) — pure C++, no ggml compute.
add_executable(qwen3-moe-residency-tests
    unit/test_moe_residency.cpp
)

target_link_libraries(qwen3-moe-residency-tests PRIVATE
    GTest::gtest_main
    qinf-layers
)

target_compile_features(qwen3-moe-residency-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-moe-residency-tests)

# Qwen36ForwardPass smoke tests (PR 3.I.2).
# Model-file tests self-skip when QWEN36_MODEL_PATH is unset.
add_executable(qwen36-forward-tests
    unit/test_qwen36_forward.cpp
)

target_link_libraries(qwen36-forward-tests PRIVATE
    GTest::gtest_main
    qinf-models
    qwen3-core
    ggml
)

target_compile_features(qwen36-forward-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen36-forward-tests)

# Qwen 3.6 hparam + inventory validation tests (PR 3.I.1).
# Pure-unit tests (no model file) run unconditionally.
# Model-file integration tests self-skip when QWEN_MODEL_PATH is unset.
add_executable(qwen36-hparams-tests
    unit/test_qwen36_hparams.cpp
)

target_link_libraries(qwen36-hparams-tests PRIVATE
    GTest::gtest_main
    qinf-loader
    qinf-models
)

target_compile_features(qwen36-hparams-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen36-hparams-tests)

# Norm helper unit tests — no model file needed.
add_executable(qwen3-norm-tests
    unit/test_norm.cpp
)

target_link_libraries(qwen3-norm-tests PRIVATE
    GTest::gtest_main
    qinf-layers
    ggml
)

target_compile_features(qwen3-norm-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-norm-tests)

# ── Phase 2 unit tests ────────────────────────────────────────────────────────

# Layer and state interface tests (no model file needed).
# Covers: LayerState, KVCache conformance + truncate_to_position,
#         RecurrentState checkpoint/restore, AttentionLayer both phases,
#         FFN Phase parameter, kv_cache build/position/truncate.
add_executable(qwen3-layer-tests
    unit/test_layer_state.cpp
    unit/test_kv_cache.cpp
    unit/test_recurrent_state.cpp
    unit/test_attention.cpp
    unit/test_ffn.cpp
)

target_link_libraries(qwen3-layer-tests PRIVATE
    GTest::gtest_main
    qinf-layers
    qinf-state
    ggml
)

target_compile_features(qwen3-layer-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-layer-tests)

# Weight-binding tests (no model file, no ggml compute).
add_executable(qwen3-weight-binding-tests
    unit/test_weight_binding.cpp
)

target_link_libraries(qwen3-weight-binding-tests PRIVATE
    GTest::gtest_main
    qinf-loader
)

target_compile_features(qwen3-weight-binding-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-weight-binding-tests)

# Loader unit tests (no model file needed).
# Covers: GGUFLoader construction, Tokenizer build, ASCII round-trip.
add_executable(qwen3-loader-tests
    unit/test_loader.cpp
)

target_link_libraries(qwen3-loader-tests PRIVATE
    GTest::gtest_main
    qinf-loader
)

target_compile_features(qwen3-loader-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-loader-tests)

# TransformerBlock unit tests — no model file needed.
# Covers: build succeeds, output finite/shape, scratch budget, Qwen2 bias path.
add_executable(qwen3-transformer-block-tests
    unit/test_transformer_block.cpp
)

target_link_libraries(qwen3-transformer-block-tests PRIVATE
    GTest::gtest_main
    qinf-layers
    qinf-state
    ggml
)

target_compile_features(qwen3-transformer-block-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-transformer-block-tests)

# ── TQ prefill canary tests ───────────────────────────────────────────────────
# Regression gate for the TurboQuant prefill path (_build_layer_batch_graph).
# Prerequisite for the build_transformer_layer extraction PR.
# Self-skips when QWEN3_MODEL_PATH is unset or the model file is absent.
# See: docs/kv-cache-unification.md open question #3.
add_executable(qwen3-tq-prefill-tests
    unit/test_qwen3_tq_prefill.cpp
)

# Bake the source-tree fixture path into the binary so it resolves correctly
# regardless of the working directory from which tests are invoked.
target_compile_definitions(qwen3-tq-prefill-tests PRIVATE
    QWEN3_TQ_BASELINE_DEFAULT="${CMAKE_SOURCE_DIR}/tests/fixtures/qwen3_tq_prefill_baseline.json"
)

target_link_libraries(qwen3-tq-prefill-tests PRIVATE
    GTest::gtest_main
    qinf-models
    qwen3-core
    nlohmann_json::nlohmann_json
    ggml
)

target_compile_features(qwen3-tq-prefill-tests PRIVATE cxx_std_17)
gtest_discover_tests(qwen3-tq-prefill-tests)
